<resources>
    <string name="app_name">FizzBuzz</string>
    <string name="title_game">Game</string>
    <string name="title_statistics">Statistics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="int1">first integer</string>
    <string name="int2">second integer</string>
    <string name="limit">limit</string>
    <string name="first_string">first string</string>
    <string name="second_string">second string</string>
    <string name="all_fields_required">*all fields required</string>
    <string name="result">Result 🔥</string>
    <string name="fill_all_fields">Please fill all fields and click result</string>
    <string name="fill_all_fields_message">please fill all fields !</string>
    <string name="put_different_integer_message">first and second integers should be different</string>
    <string name="number_of_hit">number of hit</string>
    <string name="empty_statistics">you haven\'t started the game yet</string>
</resources>